Filled out missing comments and javadocs
Made sure formatting was consistent throughout